--- a/index.html
+++ b/index.html
@@ -752,6 +752,13 @@ recentAnswersContainer.appendChild(answerCard);
     </div>
 </body>
     <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => console.log('Service Worker 등록됨:', reg.scope))
+      .catch(err => console.error('Service Worker 등록 실패:', err));
+  }
+</script>
+    <script>
   (function(){var w=window;if(w.ChannelIO){return w.console.error("ChannelIO script included twice.");}var ch=function(){ch.c(arguments);};ch.q=[];ch.c=function(args){ch.q.push(args);};w.ChannelIO=ch;function l(){if(w.ChannelIOInitialized){return;}w.ChannelIOInitialized=true;var s=document.createElement("script");s.type="text/javascript";s.async=true;s.src="https://cdn.channel.io/plugin/ch-plugin-web.js";var x=document.getElementsByTagName("script")[0];if(x.parentNode){x.parentNode.insertBefore(s,x);}}if(document.readyState==="complete"){l();}else{w.addEventListener("DOMContentLoaded",l);w.addEventListener("load",l);}})();
 
   ChannelIO('boot', {
@@ -761,3 +768,4 @@ recentAnswersContainer.appendChild(answerCard);
 </div>
 
 </html>
+
