--- a/test.html
+++ b/test.html
@@ -1,155 +1,93 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>홈 화면에 앱 추가</title>
-    <meta name="description" content="웹 사이트를 홈 화면에 앱처럼 설치하는 방법 데모입니다.">
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon-192x192.png"> <meta name="apple-mobile-web-app-capable" content="yes">  <meta name="apple-mobile-web-app-status-bar-style" content="black"> <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f0f4f8; /* 밝은 배경색 */
-            margin: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>나의 멋진 PWA 웹사이트</title>
 
-        .container {
-            text-align: center;
-            background-color: #ffffff; /* 흰색 컨테이너 배경 */
-            padding: 30px;
-            border-radius: 12px; /* 둥근 테두리 */
-            box-shadow: 0 8px 20px rgba(0,0,0,0.1); /* 부드러운 그림자 */
-            max-width: 90%; /* 최대 너비 제한 */
-            width: 450px;
-        }
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json">
 
-        h1 {
-            font-size: 28px;
-            color: #2c3e50; /* 더 어두운 제목 색상 */
-            margin-bottom: 20px;
-        }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
 
-        p {
-            font-size: 18px;
-            color: #555555; /* 약간 더 어두운 텍스트 색상 */
-            margin-bottom: 25px;
-            line-height: 1.6; /* 줄 간격 개선 */
-        }
+    h1 {
+      color: #333;
+    }
 
-        #install-button {
-            display: inline-flex; /* 아이콘과 텍스트를 나란히 배치 */
-            align-items: center; /* 아이콘과 텍스트를 수직으로 중앙 정렬 */
-            background-color: #4299e1; /* 더 밝은 파란색 */
-            color: white;
-            padding: 12px 25px;
-            border: none;
-            border-radius: 8px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background-color 0.3s ease; /* 부드러운 전환 효과 */
-            margin-top: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* 은은한 그림자 */
-        }
+    #install-btn {
+      background-color: #4CAF50; /* 초록색 배경 */
+      color: white; /* 글자 색 */
+      padding: 10px 20px; /* 여백 */
+      font-size: 16px; /* 글자 크기 */
+      border: none; /* 테두리 없애기 */
+      border-radius: 5px; /* 둥근 모서리 */
+      cursor: pointer; /* 마우스를 올렸을 때 손 모양 */
+      transition: background-color 0.3s; /* 배경색 변경 시 애니메이션 */
+      display: none; /* 기본적으로 숨김 */
+    }
 
-        #install-button:hover {
-            background-color: #3182ce; /* 호버 시 약간 더 어두운 파란색 */
-        }
-
-        #install-button img {
-            margin-right: 8px; /* 아이콘과 텍스트 간 간격 */
-            height: 24px; /* 아이콘 크기 조정 */
-            width: 24px;
-        }
-
-        #install-message {
-            margin-top: 20px;
-            font-size: 16px;
-            color: #2d3748;
-            display: none; /* 처음에는 숨김 */
-            background-color: #edf2f7; /* 밝은 배경 */
-            padding: 15px;
-            border-radius: 8px;
-            border: 1px solid #e2e8f0; /* 밝은 테두리 */
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 20px;
-            }
-            h1 {
-                font-size: 24px;
-            }
-            p {
-                font-size: 16px;
-            }
-            #install-button {
-                font-size: 16px;
-                padding: 10px 20px;
-            }
-        }
-    </style>
+    #install-btn:hover {
+      background-color: #45a049; /* 마우스를 올렸을 때 배경색 변경 */
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>홈 화면에 앱 추가</h1>
-        <p>이 웹 사이트를 홈 화면에 설치하여 앱처럼 사용할 수 있습니다.</p>
-        <button id="install-button">
-            <img src="https://unpkg.com/ionicons@5.5.2/dist/svg/add.svg" alt="설치 아이콘">
-            설치하기
-        </button>
-        <div id="install-message">설치가 완료되었습니다! 이제 앱처럼 사용할 수 있습니다.</div>
-    </div>
+  <h1>나의 멋진 PWA 웹사이트에 오신 것을 환영합니다!</h1>
 
-    <script>
-        let deferredPrompt;
-        const installButton = document.getElementById('install-button');
-        const installMessage = document.getElementById('install-message');
+  <!-- 홈 화면에 추가 버튼 -->
+  <button id="install-btn">홈 화면에 추가</button>
 
-        window.addEventListener('beforeinstallprompt', (e) => {
-            e.preventDefault();
-            deferredPrompt = e;
-            installButton.style.display = 'inline-flex'; // 버튼 표시 (display:flex 에서 inline-flex 로 변경)
+  <!-- 서비스 워커 등록을 위한 스크립트 -->
+  <script>
+    let deferredPrompt;
+
+    // PWA 설치 가능 여부 체크
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault(); // 기본 설치 팝업 방지
+      deferredPrompt = e; // 나중에 사용하기 위해 이벤트 저장
+
+      // 설치 버튼 보이기
+      document.getElementById('install-btn').style.display = 'block';
+    });
+
+    // 홈 화면에 추가 버튼 클릭시
+    document.getElementById('install-btn').addEventListener('click', () => {
+      if (deferredPrompt) {
+        // 설치 대화상자 띄우기
+        deferredPrompt.prompt();
+
+        deferredPrompt.userChoice.then((choiceResult) => {
+          console.log('사용자가 앱 설치 선택:', choiceResult.outcome);
+          if (choiceResult.outcome === 'accepted') {
+            console.log('사용자가 앱을 설치함');
+          } else {
+            console.log('사용자가 앱 설치를 거부함');
+          }
+          // 대화상자 처리가 끝나면 deferredPrompt를 초기화
+          deferredPrompt = null;
         });
+      }
+    });
+  </script>
 
-        installButton.addEventListener('click', async () => {
-            if (deferredPrompt) {
-                deferredPrompt.prompt();
-                const choiceResult = await deferredPrompt.userChoice;
-                if (choiceResult.outcome === 'accepted') {
-                    console.log('사용자가 설치를 수락했습니다.');
-                    installMessage.style.display = 'block';
-                    installButton.style.display = 'none';
-                } else {
-                    console.log('사용자가 설치를 거부했습니다.');
-                }
-                deferredPrompt = null;
-            } else if (navigator.standalone) {
-                installMessage.textContent = "이미 홈 화면에 설치되어 있습니다.";
-                installMessage.style.display = 'block';
-                installButton.style.display = 'none';
-            } else {
-                // 지원하지 않는 브라우저거나, 이미 설치된 경우
-                installMessage.textContent = "브라우저가 설치를 지원하지 않거나, 이미 설치되었습니다.";
-                installMessage.style.display = 'block';
-                installButton.style.display = 'none';
-            }
-        });
-
-        // iOS PWA 확인 및 처리
-        if (navigator.standalone) {
-            installMessage.textContent = "홈 화면에 이미 설치되어 있습니다 (iOS).";
-            installMessage.style.display = 'block';
-            installButton.style.display = 'none';
-        } else if (window.matchMedia('(display-mode: standalone)').matches) {
-            installMessage.textContent = "홈 화면에 이미 설치되어 있습니다 (Android).";
-            installMessage.style.display = 'block';
-            installButton.style.display = 'none';
-        }
-    </script>
+  <!-- 서비스 워커 등록 -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then((reg) => {
+            console.log('Service Worker 등록 성공:', reg.scope);
+          })
+          .catch((err) => {
+            console.log('Service Worker 등록 실패:', err);
+          });
+      });
+    }
+  </script>
 </body>
 </html>
-
