--- a/search.html
+++ b/search.html
@@ -217,7 +217,7 @@
         let allAnswers = [
             {
                 title: '개념+유형 기초탄탄 라이트 중학 수학 1-1',
-                link: 'https://jungdapi.netlify.app/uhyeong',
+                link: '/uhyeong',
                 imgSrc: 'https://i.postimg.cc/3NcNq4y7/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
                 school: '중등',
