--- a/app.html
+++ b/app.html
@@ -85,10 +85,10 @@
         #help-button {
             display: inline-flex;
             align-items: center;
-            background-color: #fff; /* 배경색을 흰색으로 변경 */
+            background-color: #e0e0e0;
             color: #333;
             padding: 16px 32px;
-            border: 1px solid #e0e0e0; /* 회색 테두리 추가 */
+            border: none;
             border-radius: 8px;
             font-size: 1.2rem;
             cursor: pointer;
@@ -97,13 +97,14 @@
         }
 
         #help-button:hover {
-            background-color: #f0f0f0; /* 호버 시 약간 연한 회색으로 변경 */
+            background-color: #d0d0d0;
         }
 
         #help-button img {
             margin-right: 12px;
             height: 28px;
             width: 28px;
+           /* filter: invert(100%);  도움말 아이콘은 색상 반전 안함 */
         }
 
         #install-message {
@@ -131,28 +132,35 @@
             padding: 20px;
             box-sizing: border-box;
             text-align: left;
+            background-color: #fff;
+            border: 1px solid #e0e0e0;
+            color: #000;
         }
 
         #help-message h2 {
             font-size: 2.2rem;
             margin-bottom: 20px;
             font-weight: bold;
+            color: #000;
         }
 
         #help-message p {
             font-size: 1.1rem;
             line-height: 1.7;
             margin-bottom: 20px;
+            color: #000;
         }
 
         #help-message ul, #help-message ol {
             margin-left: 20px;
             margin-bottom: 20px;
             font-size: 1.1rem;
+            color: #000;
         }
 
         #help-message li {
             margin-bottom: 10px;
+            color: #000;
         }
 
         #help-message .close-button {
@@ -161,7 +169,7 @@
             right: 20px;
             font-size: 2rem;
             cursor: pointer;
-            color: #fff;
+            color: #000;
             border: none;
             background: none;
         }
@@ -270,14 +278,14 @@
             <button class="close-button">&times;</button>
             <h2>앱 설치 방법</h2>
             <ol>
-                <li>설치하기 버튼을 누르세요.</li>
+                <li>"설치하기" 버튼을 누르세요.</li>
                 <li>브라우저의 안내에 따라 앱을 설치하세요.</li>
                 <li>설치가 완료되면 홈 화면에서 앱을 실행할 수 있습니다.</li>
             </ol>
             <h2>시스템 요구 사항</h2>
             <ul>
-                <li>AndroidㅣChrome 70 이상</li>
-                <li>iOSㅣSafari 14 이상</li>
+                <li>Android: Chrome 70 이상</li>
+                <li>iOS: Safari 14 이상</li>
             </ul>
             <h2>추가 정보</h2>
             <p>더 궁금한 점이 있으시면 <a href="https://www.jungdapi.netliy.app" style="color: #fff; text-decoration: underline;">Jungdapi 홈페이지</a>를 방문해주세요.</p>
@@ -320,7 +328,8 @@
                 installButton.style.display = 'none';
                 helpButton.style.display = 'none';
             } else {
-                installMessage.textContent = "브라우저가 앱 설치를 지원하지 않습니다.";
+                // PWA 설치를 지원하지 않는 브라우저
+                installMessage.textContent = "브라우저가 설치를 지원하지 않습니다.";
                 installMessage.style.display = 'block';
                 installButton.style.display = 'none';
                 helpButton.style.display = 'none';
