--- a/app.html
+++ b/app.html
@@ -1,362 +1,198 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>앱 설치 데모</title>
-    <meta name="description" content="웹 사이트를 홈 화면에 설치하는 방법 데모입니다.">
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon-192x192.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #fff;
-            margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jungdapi 앱 다운로드</title>
+  <meta name="description" content="웹 사이트를 홈 화면에 앱처럼 설치하는 방법 데모입니다.">
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="icon-192x192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      background-color: #fff;
+      margin: 0;
+      padding: 20px;
+      box-sizing: border-box;
+    }
 
-        header {
-            text-align: center;
-            margin-bottom: 50px;
-            width: 100%;
-        }
+    header {
+      text-align: center;
+      margin-bottom: 50px;
+      width: 100%;
+    }
 
-        header h1 {
-            font-size: 2.8rem;
-            color: #000;
-            margin-bottom: 15px;
-            letter-spacing: -0.02em;
-            font-weight: 600;
-        }
+    header h1 {
+      font-size: 2.8rem;
+      color: #000;
+      margin-bottom: 15px;
+      letter-spacing: -0.02em;
+      font-weight: 600;
+    }
 
-        header p {
-            font-size: 1.1rem;
-            color: #666;
-            line-height: 1.7;
-            max-width: 70%;
-            margin: 0 auto;
-        }
+    header p {
+      font-size: 1.1rem;
+      color: #666;
+      line-height: 1.7;
+      max-width: 70%;
+      margin: 0 auto;
+    }
 
-        .main-content {
-            text-align: center;
-            background-color: transparent;
-            padding: 0;
-            max-width: 95%;
-            width: 100%;
-            box-sizing: border-box;
-        }
+    .main-content {
+      text-align: center;
+      padding: 0;
+      max-width: 95%;
+      width: 100%;
+      box-sizing: border-box;
+    }
 
-        #install-button {
-            display: inline-flex;
-            align-items: center;
-            background-color: #000;
-            color: white;
-            padding: 16px 32px;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.2rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: 20px;
-            margin-right: 10px;
-        }
+    #install-button {
+      display: none;
+      align-items: center;
+      background-color: #000;
+      color: white;
+      padding: 16px 32px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      margin-top: 20px;
+      margin-right: 10px;
+    }
 
-        #install-button:hover {
-            background-color: #333;
-        }
+    #install-button:hover {
+      background-color: #333;
+    }
 
-        #install-button img {
-            margin-right: 12px;
-            height: 28px;
-            width: 28px;
-            filter: invert(100%);
-        }
+    #install-button img {
+      margin-right: 12px;
+      height: 28px;
+      width: 28px;
+      filter: invert(100%);
+    }
 
-        #help-button {
-            display: inline-flex;
-            align-items: center;
-            background-color: #e0e0e0;
-            color: #333;
-            padding: 16px 32px;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.2rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: 20px;
-        }
+    #install-message {
+      margin-top: 30px;
+      font-size: 1.1rem;
+      color: #000;
+      display: none;
+      text-align: center;
+    }
 
-        #help-button:hover {
-            background-color: #d0d0d0;
-        }
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2.5rem;
+      }
 
-        #help-button img {
-            margin-right: 12px;
-            height: 28px;
-            width: 28px;
-           /* filter: invert(100%);  도움말 아이콘은 색상 반전 안함 */
-        }
+      header p {
+        font-size: 1rem;
+      }
 
-        #install-message {
-            margin-top: 30px;
-            font-size: 1.1rem;
-            color: #000;
-            display: none;
-            text-align: center;
-        }
+      #install-button {
+        font-size: 1rem;
+        padding: 14px 28px;
+      }
 
-        #help-message {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: #fff;
-            display: none;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 10;
-            overflow-y: auto;
-            padding: 20px;
-            box-sizing: border-box;
-            text-align: left;
-            background-color: #fff;
-            border: 1px solid #e0e0e0;
-            color: #000;
-        }
+      #install-button img {
+        height: 26px;
+        width: 26px;
+      }
 
-        #help-message h2 {
-            font-size: 2.2rem;
-            margin-bottom: 20px;
-            font-weight: bold;
-            color: #000;
-        }
+      #install-message {
+        font-size: 1rem;
+      }
+    }
 
-        #help-message p {
-            font-size: 1.1rem;
-            line-height: 1.7;
-            margin-bottom: 20px;
-            color: #000;
-        }
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2.2rem;
+      }
 
-        #help-message ul, #help-message ol {
-            margin-left: 20px;
-            margin-bottom: 20px;
-            font-size: 1.1rem;
-            color: #000;
-        }
+      header p {
+        font-size: 0.95rem;
+      }
 
-        #help-message li {
-            margin-bottom: 10px;
-            color: #000;
-        }
+      #install-button {
+        font-size: 0.9rem;
+        padding: 12px 24px;
+      }
 
-        #help-message .close-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 2rem;
-            cursor: pointer;
-            color: #000;
-            border: none;
-            background: none;
-        }
+      #install-button img {
+        height: 24px;
+        width: 24px;
+      }
 
-        footer {
-            margin-top: 40px;
-            text-align: center;
-            color: #86868b;
-            font-size: 0.9rem;
-            padding-top: 20px;
-            border-top: 1px solid #e5e5e5;
-            width: 100%;
-        }
-
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2.5rem;
-            }
-
-            header p {
-                font-size: 1rem;
-            }
-
-            .main-content {
-                padding: 0;
-            }
-
-            #install-button, #help-button {
-                font-size: 1rem;
-                padding: 14px 28px;
-            }
-
-            #install-button img, #help-button img {
-                height: 26px;
-                width: 26px;
-            }
-
-            footer {
-                font-size: 0.8rem;
-            }
-
-            #help-message h2 {
-                font-size: 2rem;
-            }
-
-            #help-message p,
-            #help-message ul,
-            #help-message ol,
-            #help-message li {
-                font-size: 1rem;
-            }
-        }
-
-        @media (max-width: 600px) {
-            header h1 {
-                font-size: 2.2rem;
-            }
-
-            header p {
-                font-size: 0.95rem;
-            }
-
-            #install-button, #help-button {
-                font-size: 0.9rem;
-                padding: 12px 24px;
-            }
-
-            #install-button img, #help-button img {
-                height: 24px;
-                width: 24px;
-            }
-
-            footer {
-                font-size: 0.75rem;
-            }
-
-            #help-message h2 {
-                font-size: 1.8rem;
-            }
-
-            #help-message p,
-            #help-message ul,
-            #help-message ol,
-            #help-message li {
-                font-size: 0.95rem;
-            }
-        }
-    </style>
+      #install-message {
+        font-size: 0.95rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Jungdapi 앱 다운로드</h1>
-        <p>앱을 다운로드해 Jungdapi를 더 편리하게 사용하세요!</p>
-    </header>
-    <main class="main-content">
-        <button id="install-button">
-            <img src="https://unpkg.com/ionicons@5.5.2/dist/svg/download-outline.svg" alt="다운로드 아이콘">
-            설치하기
-        </button>
-        <button id="help-button">
-            <img src="https://unpkg.com/ionicons@5.5.2/dist/svg/help-circle-outline.svg" alt="도움말 아이콘">
-            도움말
-        </button>
-        <div id="install-message">설치가 완료되었습니다! 이제 앱처럼 사용할 수 있습니다.</div>
-        <div id="help-message">
-            <button class="close-button">&times;</button>
-            <h2>앱 설치 방법</h2>
-            <ol>
-                <li>"설치하기" 버튼을 누르세요.</li>
-                <li>브라우저의 안내에 따라 앱을 설치하세요.</li>
-                <li>설치가 완료되면 홈 화면에서 앱을 실행할 수 있습니다.</li>
-            </ol>
-            <h2>시스템 요구 사항</h2>
-            <ul>
-                <li>Android: Chrome 70 이상</li>
-                <li>iOS: Safari 14 이상</li>
-            </ul>
-            <h2>추가 정보</h2>
-            <p>더 궁금한 점이 있으시면 <a href="https://www.jungdapi.netliy.app" style="color: #fff; text-decoration: underline;">Jungdapi 홈페이지</a>를 방문해주세요.</p>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Jungdapi. All rights reserved.</p>
-    </footer>
-    <script>
-        let deferredPrompt;
-        const installButton = document.getElementById('install-button');
-        const helpButton = document.getElementById('help-button');
-        const installMessage = document.getElementById('install-message');
-        const helpMessage = document.getElementById('help-message');
-        const closeButton = helpMessage.querySelector('.close-button');
+  <header>
+    <h1>Jungdapi 앱 다운로드</h1>
+    <p>이 웹 사이트를 홈 화면에 설치하여 앱처럼 사용할 수 있습니다.</p>
+  </header>
+  <main class="main-content">
+    <button id="install-button">
+      <img src="https://unpkg.com/ionicons@5.5.2/dist/svg/download-outline.svg" alt="설치 아이콘">
+      설치하기
+    </button>
+    <div id="install-message">설치가 완료되었습니다! 이제 앱처럼 사용할 수 있습니다.</div>
+  </main>
+  <script>
+    let deferredPrompt;
+    const installButton = document.getElementById('install-button');
+    const installMessage = document.getElementById('install-message');
 
-        window.addEventListener('beforeinstallprompt', (e) => {
-            e.preventDefault();
-            deferredPrompt = e;
-            installButton.style.display = 'inline-flex';
-            helpButton.style.display = 'inline-flex';
-        });
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      installButton.style.display = 'inline-flex';
+    });
 
-        installButton.addEventListener('click', async () => {
-            if (deferredPrompt) {
-                deferredPrompt.prompt();
-                const choiceResult = await deferredPrompt.userChoice;
-                if (choiceResult.outcome === 'accepted') {
-                    console.log('설치를 수락했습니다.');
-                    installMessage.style.display = 'block';
-                    installButton.style.display = 'none';
-                    helpButton.style.display = 'none';
-                } else {
-                    console.log('설치를 거부했습니다.');
-                }
-                deferredPrompt = null;
-            } else if (navigator.standalone) {
-                installMessage.textContent = "앱이 이미 설치됐습니다.";
-                installMessage.style.display = 'block';
-                installButton.style.display = 'none';
-                helpButton.style.display = 'none';
-            } else {
-                // PWA 설치를 지원하지 않는 브라우저
-                installMessage.textContent = "브라우저가 설치를 지원하지 않습니다.";
-                installMessage.style.display = 'block';
-                installButton.style.display = 'none';
-                helpButton.style.display = 'none';
-            }
-        });
-
-        helpButton.addEventListener('click', () => {
-            helpMessage.style.display = 'flex';
-            document.body.style.overflow = 'hidden';
-        });
-
-        closeButton.addEventListener('click', () => {
-            helpMessage.style.display = 'none';
-            document.body.style.overflow = 'unset';
-        });
-
-        if (navigator.standalone) {
-            installMessage.textContent = "[ios] 홈 화면에 이미 설치되어 있습니다.";
-            installMessage.style.display = 'block';
-            installButton.style.display = 'none';
-            helpButton.style.display = 'none';
-        } else if (window.matchMedia('(display-mode: standalone)').matches) {
-            installMessage.textContent = "[Android] 홈 화면에 이미 설치되어 있습니다.";
-            installMessage.style.display = 'block';
-            installButton.style.display = 'none';
-            helpButton.style.display = 'none';
+    installButton.addEventListener('click', async () => {
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        const choiceResult = await deferredPrompt.userChoice;
+        if (choiceResult.outcome === 'accepted') {
+          console.log('사용자가 설치를 수락했습니다.');
+          installMessage.style.display = 'block';
+          installButton.style.display = 'none';
+        } else {
+          console.log('사용자가 설치를 거부했습니다.');
         }
-    </script>
+        deferredPrompt = null;
+      } else if (navigator.standalone) {
+        installMessage.textContent = "이미 홈 화면에 설치되어 있습니다.";
+        installMessage.style.display = 'block';
+        installButton.style.display = 'none';
+      } else {
+        installMessage.textContent = "브라우저가 설치를 지원하지 않거나, 이미 설치되었습니다.";
+        installMessage.style.display = 'block';
+        installButton.style.display = 'none';
+      }
+    });
+
+    if (navigator.standalone) {
+      installMessage.textContent = "[iOS] 이미 홈 화면에 설치되어 있습니다.";
+      installMessage.style.display = 'block';
+      installButton.style.display = 'none';
+    } else if (window.matchMedia('(display-mode: standalone)').matches) {
+      installMessage.textContent = "[Android] 이미 홈 화면에 설치되어 있습니다.";
+      installMessage.style.display = 'block';
+      installButton.style.display = 'none';
+    }
+  </script>
 </body>
 </html>
