--- a/app.html
+++ b/app.html
@@ -274,8 +274,10 @@
                 <li>브라우저의 안내에 따라 앱을 설치하세요.</li>
                 <li>설치가 완료되면 홈 화면에서 앱을 실행할 수 있습니다.</li>
             </ol>
-            <h2>왜 '브라우저가 앱 설치를 지원하지 않습니다'라고 뜨나요?<h2>
+            <h2>왜 '브라우저가 앱 설치를 지원하지 않습니다'라고 뜨나요?</h2>
+            <ol>
                  <li>접속한 브라우저가 카카오톡 등 기타 브라우저일수 있습니다. chrome/삼성 인터넷 등의 브라우저로 접속하세요.</li>
+            <ol>
 
             <h2>추가 정보</h2>
             <p>더 궁금한 점이 있으시면 <a href="https://www.jungdapi.netliy.app" style="color: #fff; text-decoration: underline;">Jungdapi 홈페이지</a>를 방문해주세요.</p>
