--- a/app.html
+++ b/app.html
@@ -252,6 +252,19 @@
     </style>
 </head>
 <body>
+    <button onclick="location.href='https://jungdapi.netlify.app'" style="
+  background-color: white;
+  color: black;
+  padding: 12px 24px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+">
+  홈으로
+</button>
+
     <header>
         <h1>Jungdapi 앱 다운로드</h1>
         <p>앱을 다운로드해 Jungdapi를 더 편리하게 사용하세요!</p>
@@ -274,13 +287,8 @@
                 <li>브라우저의 안내에 따라 앱을 설치하세요.</li>
                 <li>설치가 완료되면 홈 화면에서 앱을 실행할 수 있습니다.</li>
             </ol>
-            <h2>왜 '브라우저가 앱 설치를 지원하지 않습니다'라고 뜨나요?</h2>
-            <ol>
-                 <li>접속한 브라우저가 카카오톡 등 기타 브라우저일수 있습니다. chrome/삼성 인터넷 등의 브라우저로 접속하세요.</li>
-            <ol>
-
-            <h2>추가 정보</h2>
-            <p>더 궁금한 점이 있으시면 <a href="https://www.jungdapi.netliy.app" style="color: #fff; text-decoration: underline;">Jungdapi 홈페이지</a>를 방문해주세요.</p>
+            <h3>왜 '브라우저가 앱 설치를 지원하지 않습니다'라고 뜨나요?</h3>
+                 <p>접속한 브라우저가 카카오톡 등 기타 브라우저일수 있습니다. chrome/삼성 인터넷 등의 브라우저로 접속하세요.</p>
         </div>
     </main>
     <footer>
