--- a/index.html
+++ b/index.html
@@ -719,3 +719,217 @@ window.addEventListener('scroll', () => {
 </div>
 
 </html>
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jungdapi 앱 설치 안내</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+
+        /* 모바일 장치에서 뷰포트 너비에 맞게 팝업창 크기 조정 */
+        @media (max-width: 640px) {
+            #popup-content {
+                max-width: 95%;
+                padding: 20px;
+                border-radius: 12px;
+            }
+
+            .popup-buttons-container {
+                flex-direction: column;
+                align-items: stretch;
+            }
+
+            .popup-buttons-container button,
+            .popup-buttons-container a {
+                margin-right: 0;
+                margin-bottom: 16px;
+                width: 100%;
+                text-align: center;
+                padding: 12px 24px;
+                border-radius: 8px;
+                font-size: 17px;
+            }
+
+            .today-close-container {
+                margin-top: 20px;
+            }
+        }
+
+        /* 데스크탑 스타일 */
+        @media (min-width: 641px) {
+            #popup-content {
+                border-radius: 12px;
+            }
+        }
+
+        .popup-buttons-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: nowrap;
+            margin-top: 20px;
+        }
+
+        .popup-buttons-container button,
+        .popup-buttons-container a {
+            margin: 8px;
+            border-radius: 8px;
+            font-size: 17px;
+            padding: 12px 24px;
+            transition: all 0.2s ease;
+        }
+
+        #close-button {
+            background-color: #f8f8f8;
+            color: #222;
+            font-weight: 500;
+        }
+
+        #close-button:hover {
+            background-color: #f0f0f0;
+        }
+
+        #install-button {
+            background-color: #007aff;
+            color: white;
+            font-weight: 600;
+        }
+
+        #install-button:hover {
+            background-color: #0064d4;
+        }
+
+        .today-close-container {
+            display: flex;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        #today-close-checkbox {
+            margin-right: 12px;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            width: 18px;
+            height: 18px;
+            border: 1px solid #888;
+            border-radius: 4px;
+            outline: none;
+            cursor: pointer;
+            transition: border-color 0.2s ease;
+        }
+
+        #today-close-checkbox:checked {
+            background-color: #007aff;
+            border-color: #007aff;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
+            background-size: 100% 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        #today-close-checkbox:hover,
+        #today-close-checkbox:focus {
+            border-color: #007aff;
+        }
+
+        .today-close-container label {
+            color: #444;
+            font-size: 15px;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        #popup-content h2 {
+            font-size: 26px;
+            font-weight: 600;
+            color: #222;
+            text-align: center;
+            margin-bottom: 16px;
+        }
+
+        #popup-content p {
+            font-size: 17px;
+            color: #444;
+            text-align: center;
+            margin-bottom: 24px;
+            line-height: 1.5;
+        }
+    </style>
+</head>
+<body class="bg-gray-100 flex justify-center items-center min-h-screen">
+    <div id="popup" class="fixed top-0 left-0 w-full h-full bg-gray-900 bg-opacity-75 z-50 flex items-center justify-center hidden">
+        <div class="bg-white rounded-xl shadow-2xl p-4 max-w-md w-full transform transition-transform duration-300 scale-0" id="popup-content">
+            <h2 class="">Jungdapi 앱을 설치하세요!</h2>
+            <p class="">더 많은 기능을 편리하게 이용해보세요.</p>
+            <div class="popup-buttons-container">
+                <button id="close-button" class="">
+                    닫기
+                </button>
+                <a href="https://jungdapi.netlify.app/app" id="install-button" class="">
+                    앱 설치
+                </a>
+            </div>
+            <div class="today-close-container">
+                <input type="checkbox" id="today-close-checkbox">
+                <label for="today-close-checkbox">오늘 보지 않기</label>
+            </div>
+        </div>
+    </div>
+    <script>
+        const popup = document.getElementById('popup');
+        const popupContent = document.getElementById('popup-content');
+        const closeButton = document.getElementById('close-button');
+        const installButton = document.getElementById('install-button');
+        const todayCloseCheckbox = document.getElementById('today-close-checkbox');
+
+        function closePopup() {
+            if (todayCloseCheckbox.checked) {
+                setCookie('popupClosed', 'true', 1);
+            }
+            popupContent.classList.remove('scale-100');
+            setTimeout(() => {
+                popup.classList.add('hidden');
+            }, 300);
+        }
+
+        function setCookie(name, value, days) {
+            const expires = new Date(Date.now() + days * 864e5).toUTCString();
+            document.cookie = `${name}=${encodeURIComponent(value)};expires=${expires};path=/`;
+        }
+
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return decodeURIComponent(parts.pop().split(';').shift());
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            if (!getCookie('popupClosed')) {
+                popup.classList.remove('hidden');
+                popupContent.classList.add('scale-100');
+            }
+        });
+
+        closeButton.addEventListener('click', closePopup);
+
+        installButton.addEventListener('click', () => {
+            window.location.href = "https://jungdapi.netlify.app/app";
+        });
+    </script>
+</body>
+</html>
+
