--- a/index.html
+++ b/index.html
@@ -700,6 +700,18 @@ window.addEventListener('scroll', () => {
         </div>
     </div>
 </body>
+        <button onclick="location.href='https://jungdapi.netlify.app/app'" style="
+  background-color: white;
+  color: black;
+  padding: 12px 24px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+">
+  앱 다운로드
+</button>
         <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/service-worker.js')
