--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@ window.addEventListener('scroll', () => {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-top: 20px; /* 상단 여백 추가 */
 ">
   앱 다운로드
 </button>
