--- a/app.html
+++ b/app.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>앱 설치 데모</title>
-    <meta name="description" content="웹 사이트를 홈 화면에 설치하는 방법 데모입니다.">
+    <title>Jungdapi 앱 다운로드</title>
+    <meta name="description" content="앱을 다운로드해 Jungdapi를 더 편리하게 사용하세요">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icon-192x192.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
