--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                 {
-                    title: '수력충전 중학 수학 1-1',
+                    title: '수력충전 중학 수학 1-1 [2015]',
                     link: 'https://jungdapi.netlify.app/suryeok',
                     imgSrc: 'https://i.postimg.cc/zD4x87tg/image.jpg',
                     description: '클릭하여 답지를 다운로드 하세요.',
@@ -471,10 +471,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '수력충전 중학 수학 1-1 [2022]',
+                    link: 'https://jungdapi.netlify.app/suryeok22',
+                    imgSrc: 'https://i.postimg.cc/QxKsntk5/22.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
