--- a/app.html
+++ b/app.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/simbol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jungdapi 앱 다운로드</title>
     <meta name="description" content="앱을 다운로드해 Jungdapi를 더 편리하게 사용하세요">
