--- a/bite.html
+++ b/bite.html
@@ -2,8 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/simbol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>READING BITE PREP (리딩바이트) 중학 영어어 1</title>
+    <title>READING BITE PREP (리딩바이트) 중학 영어 1</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
