--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     </style>
     <script>
         let currentPage = 1;
-        const recordsPerPage = 3;
+        const recordsPerPage = 5;
 
         function handleSearch() {
             window.location.href = 'https://jungdapi.netlify.app/search';
@@ -477,10 +477,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '개념풀 중학 과학 1-1',
+                    link: 'https://jungdapi.netlify.app/ful',
+                    imgSrc: 'https://i.postimg.cc/Qtv7BxJr/XL-3.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
