--- a/index.html
+++ b/index.html
@@ -700,6 +700,48 @@ window.addEventListener('scroll', () => {
         </div>
     </div>
 </body>
+        <button onclick="location.href='https://jungdapi.netlify.app/app'" style="
+  background-color: white;
+  color: black;
+  padding: 12px 24px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-top: 20px; /* 상단 여백 추가 */
+">
+  앱 다운로드
+</button>
+        <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => console.log('Service Worker 등록됨:', reg.scope))
+      .catch(err => console.error('Service Worker 등록 실패:', err));
+  }
+    </script>
+<script>
+  (function(){var w=window;if(w.ChannelIO){return w.console.error("ChannelIO script included twice.");}var ch=function(){ch.c(arguments);};ch.q=[];ch.c=function(args){ch.q.push(args);};w.ChannelIO=ch;function l(){if(w.ChannelIOInitialized){return;}w.ChannelIOInitialized=true;var s=document.createElement("script");s.type="text/javascript";s.async=true;s.src="https://cdn.channel.io/plugin/ch-plugin-web.js";var x=document.getElementsByTagName("script")[0];if(x.parentNode){x.parentNode.insertBefore(s,x);}}if(document.readyState==="complete"){l();}else{w.addEventListener("DOMContentLoaded",l);w.addEventListener("load",l);}})();
+
+  ChannelIO('boot', {
+    "pluginKey": "737e7597-292e-4d3d-b33b-6c7e988abeb3"
+  });
+</script>
+</div>
+
+</html>
+
+
+
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>팝업창</title> <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -866,33 +908,5 @@ window.addEventListener('scroll', () => {
 
         window.onload = showPopup;
     </script>
-        <button onclick="location.href='https://jungdapi.netlify.app/app'" style="
-  background-color: white;
-  color: black;
-  padding: 12px 24px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  margin-top: 20px; /* 상단 여백 추가 */
-">
-  앱 다운로드
-</button>
-        <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => console.log('Service Worker 등록됨:', reg.scope))
-      .catch(err => console.error('Service Worker 등록 실패:', err));
-  }
-    </script>
-<script>
-  (function(){var w=window;if(w.ChannelIO){return w.console.error("ChannelIO script included twice.");}var ch=function(){ch.c(arguments);};ch.q=[];ch.c=function(args){ch.q.push(args);};w.ChannelIO=ch;function l(){if(w.ChannelIOInitialized){return;}w.ChannelIOInitialized=true;var s=document.createElement("script");s.type="text/javascript";s.async=true;s.src="https://cdn.channel.io/plugin/ch-plugin-web.js";var x=document.getElementsByTagName("script")[0];if(x.parentNode){x.parentNode.insertBefore(s,x);}}if(document.readyState==="complete"){l();}else{w.addEventListener("DOMContentLoaded",l);w.addEventListener("load",l);}})();
-
-  ChannelIO('boot', {
-    "pluginKey": "737e7597-292e-4d3d-b33b-6c7e988abeb3"
-  });
-</script>
-</div>
-
+</body>
 </html>
