--- a/search.html
+++ b/search.html
@@ -253,7 +253,7 @@
                 semester: '2',
             },
             {
-                title: 'I Love Grammar 1권',
+                title: 'I Love Grammar Level 1 (1권)',
                 link: 'https://jungdapi.netlify.app/ilg',
                 imgSrc: 'https://i.postimg.cc/T25Sv5Q1/ilove.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
@@ -368,6 +368,15 @@
                 school: '중등',
                 grade: '1',
                 semester: '1',
+            },
+            {
+                title: 'I Love Grammar Level 2 (2권)',
+                link: 'https://jungdapi.netlify.app/ilg2',
+                imgSrc: 'https://i.postimg.cc/C5dyhHfw/XL-4.jpg',
+                description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중등',
+                grade: '1',
+                semester: '2',
             },
             
         ];
