--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                 {
-                    title: 'I love grammar level 1',
+                    title: 'I Love Grammar Level 1 (1권)',
                     link: 'https://jungdapi.netlify.app/ilg',
                     imgSrc: 'https://i.postimg.cc/T25Sv5Q1/ilove.jpg',
                     description: '클릭하여 답지를 다운로드 하세요.',
@@ -483,10 +483,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: 'I Love Grammar Level 2 (2권)',
+                    link: 'https://jungdapi.netlify.app/ilg2',
+                    imgSrc: 'https://i.postimg.cc/C5dyhHfw/XL-4.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
